--- a/brainrot.html
+++ b/brainrot.html
@@ -1,77 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="brainrot.css">    
         <title>YOU ARE ENLIGHTENED</title>
+        <link rel="stylesheet" href="brainrot.css">    
         <script src="https://www.youtube.com/iframe_api"></script>
     </head>
     
     <body class = "Body" id = "Body">
+        
+        <script src = "brainrot.js"></script>
+
         <div class = "VideoGrid", id = "VideoGrid">
         </div>
-        <script>
-            var VideoGrid = document.getElementById("VideoGrid");
-            var VideoUrls = [
-                "ChBg4aowzX8",
-                "Q4MOP8s9KyY",
-                "pt_k_HNz1DE",
-                "fuQf-iGCmKA",
-                "qXcMNBQnQMM",
-                "PVOCPGXYA0w",
-                "-FR1lXLEcmM",
-                "LjtVRw9af2U",
-                "10gjsgA6fTE",
-                "a_r3QouhG3E",
-                "1Dxqmd4lA7Y",
-                "rs9BZg4gDW0",
-                "vD-NlntuD6Y",
-                "n_Dv4JMiwK8",
-                "jTYH3eCGHTM",
-                "PERqJhJG12I",
-                "5mGuCdlCcNM",
-                "gBAKe472zus",
-                "RojwXNJZYHg",
-                "VoVJECL-2NA",
-                "fu2gdoP8AFk", // Background
-                "7Ge7Ajbzc0U"  //
-            ]
-            var player;
 
-            function onYouTubeIframeAPIReady() {
-                VideoCount = 1
-
-                VideoUrls.forEach(function (VideoUrl) {
-                    var VideoDiv = document.createElement("div");
-                    var IsBackgroundVideo = VideoUrl == "fu2gdoP8AFk" || VideoUrl == "7Ge7Ajbzc0U";
-                    if (IsBackgroundVideo) { // Seperate code for the hypnotic effect
-                        Body = document.getElementById("Body");
-                        VideoDiv.id = `Video ${VideoCount}`;
-                        VideoDiv.style.opacity = VideoUrl == "fu2gdoP8AFk" ? 0.03 : 0.3; // Sets opacity
-                        VideoDiv.style.position = `Absolute`;
-                        Body.appendChild(VideoDiv);
-                    }
-                    else {
-                        VideoDiv.id = `Video ${VideoCount}`
-                        VideoGrid.appendChild(VideoDiv);
-                    }
-                    player = new YT.Player(`Video ${VideoCount}`, {
-                        height: IsBackgroundVideo ? `${screen.height}` : `${screen.height / 4.6}`,
-                        width: IsBackgroundVideo ? `${screen.width}` : `${screen.width / 5}`,
-                        videoId: VideoUrl,
-                        playerVars: { // Stops you from interacting with all the youtube stuff
-                            autoplay: 1,
-                            controls: 0, 
-                            modestbranding: 1,
-                            showinfo: 0,
-                            fs: 0,
-                            rel: 0,
-                            mute: 1 
-                        }
-                    });
-
-                    VideoCount++;
-                });
-            }
-        </script>
     </body>
 </html>
