--- a/brainrot.html
+++ b/brainrot.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>YOU ARE ENLIGHTENED</title>
         <link rel="stylesheet" href="brainrot.css">    
+        <title>YOU ARE ENLIGHTENED</title>
         <script src="https://www.youtube.com/iframe_api"></script>
     </head>
-    
+
     <body class = "Body" id = "Body">
-        
+        <div class = "VideoGrid", id = "VideoGrid"></div>
         <script src = "brainrot.js"></script>
-
-        <div class = "VideoGrid", id = "VideoGrid">
-        </div>
-
     </body>
 </html>
