--- a/index.html
+++ b/index.html
@@ -10,13 +10,21 @@
         <div id = "MouseBlurContainer"></div> <!-- This div is used to store the mouse moving blur -->
         <div id = "ClickBlurContainer"></div> <!-- This div is used to store the clicking blur -->
 
-        <div class = "MindPalaceContainer">
-            <img class = "MindPalaceImage" src = "Images/Mind Palace.png" id = "image" onmouseover = "StartMakingLensFlaresBrighter()">
-            <img class = "MindPalaceLensFlare MindPalaceLensFlareLeft" src = "Images/Lens Flare.png">
-            <img class = "MindPalaceLensFlare MindPalaceLensFlareRight" src = "Images/Lens Flare.png">
-            <p class = "MindPalaceText">Enter the mind palace</p>
+        <div class = "Buttons">
+            <div class = "ButtonContainer" id = "MindPalace">
+                <img class = "ButtonImage" src = "Images/Mind Palace.png" id = "MindPalaceImage" onmouseover = "StartMakingLensFlaresBrighter()">
+                <img class = "MindPalaceLensFlare MindPalaceLensFlareLeft" src = "Images/Lens Flare.png">
+                <img class = "MindPalaceLensFlare MindPalaceLensFlareRight" src = "Images/Lens Flare.png">
+                <p class = "ButtonText MindPalaceText">Enter the mind palace</p>
+            </div>
+
+            <div class = "ButtonContainer" id = "YapSession">
+                <img class = "ButtonImage" src = "Images/Sleeping.gif" id = "YapSessionImage">
+                <p class = "ButtonText YapSessionText">Have A Yap session</p>
+            </div>
+
         </div>
-        
+
         <script src = "index.js"></script>
     </body>
 </html>
