Moved the Js click events to html

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 
         <div class = "Buttons">
             <div class = "ButtonContainer" id = "MindPalace">
-                <img class = "ButtonImage" src = "Images/Mind Palace.png" id = "MindPalaceImage" onmouseover = "StartMakingLensFlaresBrighter()">
+                <img class = "ButtonImage" src = "Images/Mind Palace.png" id = "MindPalaceImage" onmouseover = "StartMakingLensFlaresBrighter()" onclick = "window.location.href = 'brainrot.html';">
                 <img class = "MindPalaceLensFlare MindPalaceLensFlareLeft" src = "Images/Lens Flare.png">
                 <img class = "MindPalaceLensFlare MindPalaceLensFlareRight" src = "Images/Lens Flare.png">
                 <p class = "ButtonText MindPalaceText">Enter the mind palace</p>
             </div>
 
             <div class = "ButtonContainer" id = "YapSession">
-                <img class = "ButtonImage" src = "Images/Sleeping.gif" id = "YapSessionImage">
+                <img class = "ButtonImage" id = "YapSessionImage" src = "Images/Sleeping.gif" onclick = "window.location.href = 'yap.html';">
                 <p class = "ButtonText YapSessionText">Have A Yap session</p>
             </div>
 
