Changed classes to ids and added robottest button
Changed all the classes that were being used once to ids and added a button to go to the robot test game

--- a/brainrot.html
+++ b/brainrot.html
@@ -6,8 +6,8 @@
         <script src = "https://www.youtube.com/iframe_api"></script>
     </head>
 
-    <body class = "Body" id = "Body">
-        <div class = "VideoGrid", id = "VideoGrid"></div>
+    <body id = "Body">
+        <div id = "VideoGrid"></div>
         <script src = "brainrot.js"></script>
     </body>
 </html>
