--- a/yap.html
+++ b/yap.html
@@ -4,7 +4,7 @@
         <title>Average Debbie Lesson</title>
         <link rel = "stylesheet" href = "yap.css">
     </head>
-    <body class = "Body">
+    <body id = "Body">
         <script src = "yap.js"></script>
     </body> 
 </html>
