Added Finite Craft (no button  yet)
Added a game where you combine resources to create new ones (THIS IS NO A BLATANT (worse) COPY NOT https://neal.fun/infinite-craft/)
Please add more stuff for me by making a pull request

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>Baked Borgan</title>
         <link rel = "stylesheet" href = "index.css">
@@ -27,9 +27,8 @@
                 <canvas class = "ButtonImage" id = "MatrixRain" onclick = "window.location.href = 'robottest/1.html';"></canvas>
                 <p class = "ButtonText" id = "MatrixRainText">Are you a robot?</p>
             </div>
-
         </div>
-
+        
         <script src = "index.js"></script>
     </body>
 </html>
