--- a/ScholarPage.html
+++ b/ScholarPage.html
@@ -4,6 +4,7 @@
         <title>GOOGLE SCHOLAR</title>
     </head>
     <body id = "Body">
-      <div>PEOPLE LOVE USING MOBILE PHONES AND NOT COMPUTERS OR LAPTOPS</div>
+        <div>GOOGLE SCHOLAR:</div>
+        <div>PEOPLE LOVE USING MOBILE PHONES AND NOT COMPUTERS OR LAPTOPS</div>
     </body> 
 </html>
